welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:13: error: type mismatch;
 found   : Unit
 required: Int
		if ( b < a ) {
                ^